# strands_agents_bedrock_agentcore

./: .gitignore  README.md  activate-locals.sh  activate-remote.sh  activate-shared.sh  pyproject.toml
agentcore_client/: README.md  pyproject.toml
agentcore_client/strands_agentcore_client/: __init__.py  __main__.py  cli.py  client.py
infrastructure-agentcore/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
infrastructure-lambda/: lambda-aws.tf  lambda_layers.tf  main.tf
infrastructure-lambda/lambda_aws_source_code/: aws.sh  bootstrap
infrastructure-multi-agent/: NETWORK_ARCHITECTURE.md  README.md  agent_aws_investigator.tf  agent_orchestrator.tf  agent_shared.tf  agent_validator.tf  agentcore.tf  ec2_searxng.tf  iam.tf  log_cleanup.tf  main.tf  monitoring.tf  observability.tf  outputs.tf  redeploy_forced.sh  security_groups.tf  stream-logs.sh  user_data.sh  variables.tf  view-agent-logs.sh  vpc.tf
infrastructure-multi-agent/monitoring/: LOG_GROUPS.md  download-conversations.sh  list-sessions.sh  show-session.sh  stream-logs.sh
infrastructure_gateway/: README.md  gateway.tf  main.tf  outputs.tf  test_gateway.py  variables.tf
lambda_infrastructure/: IMPROVEMENT_REPORT.md  README.md  buckets.tf  outputs.tf  resetTerraform.sh  variables.tf
local-agents/: README.md  pyproject.toml
local-agents/local_agents/: __init__.py  __main__.py  agent_wrapper.py  cli.py
local-agents/local_agents/aws_investigator/: .env.example  agent.py  config.py  system_prompt.md
local-agents/local_agents/claude/: .env.example  agent.py  system_prompt.md
local-agents/local_agents/ollama/: .env.example  agent.py  config.py  system_prompt.md
multi-agent/: .bedrock_agentcore.yaml  Dockerfile  README.md  entrypoint.sh  orchestrator_entrypoint.py  pre-deploy.sh  pyproject.toml  remote_entrypoint.py  requirements.txt  validator_entrypoint.py
multi-agent/multi_agents/: __init__.py  conversation_logger.py  orchestrator_entrypoint.py  remote_entrypoint.py  validator_entrypoint.py
multi-agent/multi_agents/aws_investigator/: __init__.py  agent.py  config.py  system_prompt.md
multi-agent/multi_agents/aws_investigator/tools/: __init__.py  fetch_content_tool.py  searxng_tool.py
multi-agent/multi_agents/orchestrator/: __init__.py  agent.py  config.py  system_prompt.md
multi-agent/multi_agents/orchestrator/tools/: __init__.py  a2a_tools.py
multi-agent/multi_agents/validator/: __init__.py  agent.py  config.py  system_prompt.md
multi-agent/multi_agents/web_search/: __init__.py  agent.py  config.py  system_prompt.md
multi-agent/multi_agents/web_search/prompts/: system_prompt.txt
multi-agent/multi_agents/web_search/tools/: fetch_content_tool.py
remote-agentcore/: .bedrock_agentcore-template.yaml  .bedrock_agentcore.yaml  README.md  pre-deploy.sh  pyproject.toml  remote_agent.py
remote-agentcore/remote_agents/: .bedrock_agentcore.yaml  .dockerignore  .gitignore  Dockerfile  __init__.py  remote_agent.py  requirements.txt
remote-agentcore/remote_agents/src/: __init__.py
remote-agentcore/remote_agents/src/claude/: agent.py  config.py  system_prompt.md
shared/: README.md  pyproject.toml
shared/strands_shared/: __init__.py
shared/strands_shared/config/: __init__.py  base_config.py
shared/strands_shared/terminal/: __init__.py  terminal.py
shared/strands_shared/tools/: __init__.py  lambda_aws_cli_executor.py
web-openui-integration/: README.md  agentcore_function.py  agentcore_function_auto.py
