[project]
name = "strands-agentcore-client"
version = "0.1.0"
description = "Client for interacting with deployed Bedrock AgentCore agents"
requires-python = ">=3.10"
dependencies = [
    "strands-shared",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
strands-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"