[project]
name = "multi-agents"
version = "0.1.0"
description = "Multi-agent system with web search capabilities"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "strands-agents>=1.16.0",
    "bedrock-agentcore>=1.0.3",
    "requests>=2.31.0",
    "agentcore>=0.1.6",
    "bedrock-agentcore-starter-toolkit>=0.3.0",
    "strands-shared",
]

[tool.uv.sources]
strands-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multi_agents"]
