[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agents"
version = "0.1.0"
description = "Multi-agent system with web search and AWS investigation capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-shared",
    "bedrock-agentcore>=1.0.3",
    "bedrock-agentcore-starter-toolkit>=0.3.0",
    "strands-agents>=1.16.0",
    "strands-agents-tools>=0.2.16",
    "boto3>=1.40.0",
    "requests>=2.31.0",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
    "moto>=4.2.0",
]

[tool.uv.sources]
strands-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["multi_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
