[project]
name = "strands-remote-agentcore"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "strands-shared",
    "local-agents",
    "bedrock-agentcore>=1.0.3",
    "strands-agents>=1.16.0",
    "strands-agents-tools>=0.2.16",
    "bedrock-agentcore-starter-toolkit>=0.1.21",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "mcp>=1.19.0",
    "python-dotenv>=1.2.1",
    "aws-opentelemetry-distro>=0.10.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
strands-shared = { workspace = true }
local-agents = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["remote_agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
